# todo-list

./: .todo  Cargo.toml  LICENSE-MIT  README.md
src/: import.rs  main.rs  prompts.rs  todo_error.rs  todo_list.rs
src/commands/: add.rs  clean.rs  complete.rs  help.rs  index_utils.rs  list.rs  mod.rs  remove.rs  utils.rs
src/data/: mod.rs  todo_item.rs  todo_list.rs
